fix: responsive tablette et mobile - police version small

--- a/components/hero.css
+++ b/components/hero.css
@@ -35,6 +35,10 @@
   min-height: unset; /* ✅ important */
   
 }
+.hero-inner.hero-small .hero-title {
+  font-size: 60px;
+  line-height: 64px;
+}
  
 /* ═══════════════════════════════════════
    TITRES
@@ -50,6 +54,7 @@
   position: relative;
   z-index: 1;
 }
+
 
 .hero-title {
   font-family: 'EB Garamond', Georgia, serif;
@@ -93,6 +98,8 @@
     padding: 0;
 
   }
+
+
 
   .hero-inner {
    
@@ -151,19 +158,22 @@ height: auto;
     line-height: 52px;
     text-align: center;
   }
-
-  .hero-subtitle-container {
-    width: 100%;
-    height: auto;
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    right: 20px;
+.hero-inner.hero-small .hero-title {
+    font-size: 32px;
+    line-height: 38px;
   }
+ .hero-subtitle-container {
+  width: auto;
+  height: auto;
+  position: absolute;
+  bottom: 20px;
+  left: auto;
+  right: 20px;
+}
 
-  .hero-subtitle {
-    font-size: 14px;
-    line-height: 22px;
-    text-align: left;
-  }
+.hero-subtitle {
+  font-size: 14px;
+  line-height: 22px;
+  text-align: right;
+}
 }
